# spec-to-agents

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEV_SETUP.md  Dockerfile  README.md  TESTING_BING_INTEGRATION.md  agent.yaml  azure.yaml  main.json  main.py  pyproject.toml
.azdo/pipelines/: azure-dev.yml
.azure/: config.json
.github/: CI_SETUP.md  CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: af-python-workflows.md  agent-framework-developer.md  azure-infra-agent.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/specs/002-entertainment-agent/: plan.md  spec.md  tasks.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
app/agents/event_planner_workflow/: __init__.py  workflow.py
app/agents/venue_specialist_agent/: __init__.py  agent.py  prompts.py
assets/: ignite-skillable-lab-instructions.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/event_planner_workflow/: __init__.py  workflow.py
backend/app/agents/venue_specialist_agent/: __init__.py  agent.py  prompts.py
backend/src/spec2agent/: __init__.py
backend/src/spec2agent/api/: _server.py
docs/: BING_GROUNDING_TEST_PLAN.md  WORKFLOW_CYCLES.md  console-improvements.md
docs/plans/: 2025-01-09-mcp-devui-integration-design.md  2025-01-30-agent-factory-refactor-design.md  2025-10-28-human-in-the-loop-implementation.md  2025-10-28-human-in-the-loop-workflow-design.md  2025-10-30-intent-based-interaction-design.md  2025-10-30-remove-request-user-input-tool.md  2025-10-31-bing-search-ai-function-design.md  2025-10-31-mcp-async-context-manager-design.md  2025-10-31-mcp-async-context-manager.md  2025-11-02-remove-coordinator-pattern-design.md  2025-11-02-remove-coordinator-pattern.md  2025-11-06-coordinator-agent-routing-refactor-implementation.md  2025-11-06-coordinator-agent-routing-refactor.md  2025-11-06-event-planner-comprehensive-output.md  2025-11-07-agent-delegation-design.md  2025-11-07-agent-delegation-implementation.md  2025-11-07-collaborative-agent-prompts-design.md
frontend/: vite.config.ts
frontend/src/services/: api.ts
infra/: MIGRATION_SUMMARY.md  README.md  abbreviations.json  main.bicep  main.parameters.json  simple-params.json
infra/app/: ai-foundry.bicep  api.bicep  apim.bicep  app-registration.bicep  app.bicep  bing-grounding.bicep  bing-grounding.json  container-app.bicep  container-registry.bicep  cosmos-db.bicep  dts.bicep  frontend.bicep
infra/app/ai/: cognitive-services.bicep
infra/app/rbac/: acr-access.bicep  ai-foundry-access.bicep  apim-access.bicep
infra/app/util/: region-selector.bicep
infra/modules-standard/: add-project-capability-host.bicep  ai-account-identity.bicep  ai-project-identity.bicep  ai-search-role-assignments.bicep  azure-storage-account-role-assignment.bicep  blob-storage-container-role-assignments.bicep  cosmos-container-role-assignments.bicep  cosmosdb-account-role-assignment.bicep  format-project-workspace-id.bicep  standard-dependent-resources.bicep  validate-existing-resources.bicep
scripts/: generate-env.ps1  generate-env.sh  generate-settings.ps1  generate-settings.sh  setup-app-registration.ps1  setup-app-registration.sh  validate-infra.sh  verify-bing-connection.sh
specs/: 2025-01-09-mcp-devui-integration.md  2025-11-06-coordinator-agent-routing-refactor.md  PLANS.md  README.md  agent-tools.md  azure-ai-foundry-tools.md  conversation-history-passing.md  declarative-workflow-refactor.md  handoff-workflow.md  handoff-workflow.md.bak  supervisor-workflow.md  workflow-comparison.md  workflow-skeleton.md
specs/001-af-concurrent-workflows/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-af-concurrent-workflows/contracts/: api-endpoints.md
specs/001-event-orchestration-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-event-orchestration-system/contracts/: openapi.yaml
specs/001-name-event-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-name-event-orchestration/contracts/: orchestration-openapi.yaml  test_orchestration_contracts.py
src/backend/: AGENTS.md  README.md  pyproject.toml  requirements.txt  test_startup.py
src/backend/app/: __init__.py  main.py
src/frontend/: package.json  pnpm-lock.yaml
src/frontend/src/: App.tsx
src/spec2agent/: __init__.py  main.py
src/spec2agent/agents/: .env.example  __init__.py  budget_analyst.py  catering_coordinator.py  event_coordinator.py  logistics_manager.py  venue_specialist.py
src/spec2agent/prompts/: budget_analyst.py  catering_coordinator.py  event_coordinator.py  logistics_manager.py  venue_specialist.py
src/spec2agent/tools/: __init__.py  calendar.py  mcp_tools.py  user_input.py  weather.py
src/spec2agent/workflow/: USER_HANDOFF.md  core.py  executors.py  messages.py
src/spec_to_agents/: __init__.py  clients.py  config.py  console.py  container.py  main.py
src/spec_to_agents/agents/: __init__.py  budget_analyst.py  calendar.py  catering_coordinator.py  event_coordinator.py  event_planning_workflow.py  event_synthesizer.py  factory.py  (+3 more)
tests/: conftest.py  test_agents_budget_analyst.py  test_agents_factory.py  test_agents_module.py  test_console.py  test_tools_bing_search.py  test_tools_calendar.py  test_tools_calendar_integration.py  test_tools_code_interpreter_integration.py  test_tools_mcp.py  test_tools_user_input.py  test_tools_weather.py  test_tools_weather_integration.py  test_tools_web_search_integration.py  test_workflow.py  test_workflow_context.py  test_workflow_executors.py  test_workflow_integration.py  test_workflow_messages.py  test_workflow_no_summarization.py  test_workflow_user_handoff.py
tests/agents/: test_budget_analyst.py  test_catering_coordinator.py  test_event_coordinator.py  test_logistics_manager.py  test_venue_specialist.py
tests/workflow/: test_auto_handoff.py
(+65 files in other folders)
