[project]
name = "spec-to-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework-project",
]

[tool.uv.sources]
agent-framework-project = { path = "../../../oss/orchestration/agent-framework/python", editable = true }
