[project]
name = "spec2agent"
version = "0.0.1"
description = "Backend for Spec-to-Agent sample demonstrating Microsoft Agent Framework"
authors = [{ name = "Microsoft", email = "opensource@microsoft.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework-core",
    "agent-framework-azure-ai",
    "azure-identity",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    # Development and testing
    "pytest",
    "ruff",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "ASYNC", # async checks
    "B",     # bugbear checks
    "E",     # error checks
    "F",     # pyflakes checks
    "I",     # isort
    "Q",     # flake8-quotes checks
    "RET",   # flake8-return check
    "RUF",   # RUF specific rules
    "SIM",   # flake8-simplify check
    "T100",  # Debugger
    "W",     # pycodestyle warning checks
]
ignore = [
    "D100", # allow missing docstring in public module
    "D104", # allow missing docstring in public package
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "RUF"]
"*_test.py" = ["D"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
